--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Flask==1.1.2
-Werkzeug==1.0.1
-markupsafe==2.0.1
+click==8.1.3
+Flask==2.2.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+waitress==2.1.2
+Werkzeug==2.2.2
